fix: added rarrow

--- a/public/projects.json
+++ b/public/projects.json
@@ -1,13 +1,13 @@
 [
   {
     "link": "https://github.com/erwanvivien/QR-Gen",
-    "title": "🔲 QRGen",
+    "title": "🔲 QRGen →",
     "desc": "Create QRCode at high speed using Rust",
     "className": "qrgen"
   },
   {
     "link": "https://github.com/erwanvivien/discord_eGLD",
-    "title": "💰 Goldr",
+    "title": "💰 Goldr →",
     "desc": "Discord bot watching crypto $eGLD",
     "className": "goldr"
   }
