--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.10",
-    "@types/react": "17.0.38",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "typescript": "4.5.4"
+    "@types/node": "^18.8.3",
+    "@types/react": "^18.0.21",
+    "eslint": "^8.24.0",
+    "eslint-config-next": "^12.3.1",
+    "typescript": "^4.8.4"
   }
 }
