--- a/public/projects.json
+++ b/public/projects.json
@@ -6,9 +6,27 @@
     "className": "fast_qr"
   },
   {
-    "link": "https://github.com/erwanvivien/discord_eGLD",
-    "title": "💰 Goldr →",
-    "desc": "Discord bot watching crypto $eGLD",
-    "className": "goldr"
+    "link": "https://github.com/erwanvivien/isim_raytracer",
+    "title": "🌠 Isim Raytracer →",
+    "desc": "CPU Raytracer, handles simple and recursive shapes",
+    "className": "isim_raytracer"
+  },
+  {
+    "link": "https://github.com/erwanvivien/algorep",
+    "title": "📚 Algorep →",
+    "desc": "A distributed key-value store with strong consistency, based on Raft",
+    "className": "algorep"
+  },
+  {
+    "link": "https://github.com/erwanvivien/fish_bot",
+    "title": "🎣 Fish Bot →",
+    "desc": "A World of Warcraft bot that reels in fish for you",
+    "className": "fish_bot"
+  },
+  {
+    "link": "https://github.com/erwanvivien/mjolnir",
+    "title": "🔨 Mjolnir →",
+    "desc": "A simple renderer for 3D Graphics",
+    "className": "mjolnir"
   }
 ]
